* 0.4 (next)
** Added
- Docstring support for defrel (@ethan-leba)
- Add reazon-timeout option for limiting queries (@ethan-leba)
- Add flag for whether or not to run the occurs-check
- Raise error on circular query

* 0.3
** Added
- The impure operators conda and condu
- Relations: assqo

** Fixed
- `precedeso` was really doing `immediately-precedeso`. The latter was added as a separate function, and the former was fixed to be appropriately general.
- The byte compiler would choke on expressions with too many fresh variables, as for instance in the 9x9 Sudoku solver.

** Improved
- Made `membero` and `subseto` more efficient.
- Significantly improved speed of Sudoku solvers.

* 0.2
** Added
- Relations: listo, membero, subseto, set-equalo, adjeacento, and precedeso
- Sudoku solvers
- Profiler and benchmarker

** Changed
- Renamed relations to end with =o= rather than =-o=

** Fixed
- Rewrote internal control functions to avoid recusion, fixing an OOM bug
- Empty conj/disj clause bug

* 0.1
First release